--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
+    <link rel="stylesheet" href="./src/index.css">
   </body>
 </html>
